...
  NavItem(
    label: 'Journée',
    icon: Icons.today_outlined,
    selectedIcon: Icons.today_rounded,
  ),
  NavItem(
    label: 'Missions',
    icon: Icons.flag_outlined,
    selectedIcon: Icons.flag_rounded,
  ),
  NavItem(
    label: 'Profil',
    icon: Icons.person_outline_rounded,
...
